--- a/client/src/assets/friends.css
+++ b/client/src/assets/friends.css
@@ -1,11 +1,37 @@
+.friend-page-container {
+    margin: 0;
+    padding:0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    h2 {
+        text-align: center;
+    }
+}
+
 .top-section{
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
     width: 100%;
-    height: 32%;
-    padding: 5vh;
+    height: 200px;
+    padding: 0px;
+    margin-top: 70px;
     background-image: url(../components/icons/banner.jpg);
 
+    @media (max-width: 700px){
+        margin-top: 0px;
+    }
+    
+    div {
+        width: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top:10px;
+    }
 }
 
 #friends-loggedin-user-icon{
@@ -43,7 +69,6 @@
     padding: 25px;
     width: 100%;
     justify-content: space-evenly;
-    border-bottom: 1px solid black;
     align-items: center;
 
     ul {
